--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
-    "axios": "^0.27.2",
+    "babel-plugin-macros": "^3.1.0",
     "keen-slider": "^6.6.14",
     "next": "12.1.6",
     "next-images": "^1.8.4",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-hook-form": "^7.31.3",
+    "sharp": "^0.30.6"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
